# my_gui_app

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/my_gui_app/: App.h
src/: App.cpp  main.cpp
